--- a/widgets/huebutton/huebutton.scss
+++ b/widgets/huebutton/huebutton.scss
@@ -9,9 +9,9 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
 // ----------------------------------------------------------------------------
 // Widget-text styles
 // ----------------------------------------------------------------------------
-.widget-korhome {
+.widget-huebutton {
     transition: background-color 1s ease;
-      background-color: $background-color;
+    //   background-color: $background-color;
 
   .title {
     color: $title-color;
@@ -24,27 +24,6 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
   .updated-at {
     color: rgba(255, 255, 255, 0.7);
   }
-
-    tr {
-        margin:0.4ex 0;
-        display: inline-block;
-
-        td {
-            padding:0 0.2ex;
-        }
-    }
-
-  a {
-    font-size: 13px;
-    background-color:#fff;
-    color:#000;
-    padding:1ex 1em;
-
-    &:hover {
-        opacity: 0.5;
-        cursor: pointer;
-    }
-  }
   h3 {
     font-size: 1.3em;
     background-color: rgba(255, 105, 114, 0.8);
@@ -54,4 +33,38 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
     border-radius: 4px;
     padding: 0.3ex 1ex;
   }
+}
+
+.btn {
+  &.on {
+    //   background-color: red;
+  }
+  .widget-huebutton &.off{
+    //   background-color: pink !important;
+  }
+  &:hover {
+      opacity: 0.5;
+      cursor: pointer;
+  }
+}
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+
+    li {
+        list-style: none;
+        width: 100%;
+
+        &[data-sizex="2"]{
+            flex-grow: 2;
+            width: 100%;
+        }
+    }
+
+    .widget {
+        display: block;
+    }
 }
